--- a/notebooks/reco_packaging.ipynb
+++ b/notebooks/reco_packaging.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4               60.5           5        0       Pochette  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "'Type emballage'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "materiaux['kg équivalent CO2 / tonne'] = materiaux['kg équivalent CO2 / tonne']/1000\n",
-    "materiaux.columns = ['Catégorie', 'Matière', 'kg CO2 / kg', 'Taux de recyclage', 'Id matière', 'Recyclé', 'Barrière à l’humidité']"
+    "materiaux.columns = ['Catégorie', 'Matière', 'kg CO2 / kg', 'Taux de recyclage', 'Id matière', 'Recyclé', 'Type emballage']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "      <th>Taux de recyclage</th>\n",
        "      <th>Id matière</th>\n",
        "      <th>Recyclé</th>\n",
-       "      <th>Barrière à l’humidité</th>\n",
+       "      <th>Type emballage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -368,23 +368,23 @@
        "152      Bois                   Bois primaire         0.964   \n",
        "153      Bois                   Bois primaire         0.964   \n",
        "\n",
-       "     Taux de recyclage  Id matière  Recyclé Barrière à l’humidité  \n",
-       "0                 62.0           1        0              Pochette  \n",
-       "1                 52.0           2        1              Pochette  \n",
-       "2                 61.5           3        0              Pochette  \n",
-       "3                 56.5           4        0              Pochette  \n",
-       "4                 60.5           5        0              Pochette  \n",
-       "..                 ...         ...      ...                   ...  \n",
-       "149               61.0          39        0                 Boîte  \n",
-       "150               61.0          39        0               Palette  \n",
-       "151               61.0          39        0            Fourchette  \n",
-       "152               61.0          39        0               Couteau  \n",
-       "153               61.0          39        0              Cuillère  \n",
+       "     Taux de recyclage  Id matière  Recyclé Type emballage  \n",
+       "0                 62.0           1        0       Pochette  \n",
+       "1                 52.0           2        1       Pochette  \n",
+       "2                 61.5           3        0       Pochette  \n",
+       "3                 56.5           4        0       Pochette  \n",
+       "4                 60.5           5        0       Pochette  \n",
+       "..                 ...         ...      ...            ...  \n",
+       "149               61.0          39        0          Boîte  \n",
+       "150               61.0          39        0        Palette  \n",
+       "151               61.0          39        0     Fourchette  \n",
+       "152               61.0          39        0        Couteau  \n",
+       "153               61.0          39        0       Cuillère  \n",
        "\n",
        "[154 rows x 7 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "      <th>Taux de recyclage</th>\n",
        "      <th>Id matière</th>\n",
        "      <th>Recyclé</th>\n",
-       "      <th>Barrière à l’humidité</th>\n",
+       "      <th>Type emballage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -458,11 +458,11 @@
        "    Catégorie                Matière  kg CO2 / kg  Taux de recyclage  \\\n",
        "86  Plastique  Plastique transparent         2.35               61.0   \n",
        "\n",
-       "    Id matière  Recyclé Barrière à l’humidité  \n",
-       "86          12        0            Bouteille   "
+       "    Id matière  Recyclé Type emballage  \n",
+       "86          12        0     Bouteille   "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,43 +480,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommandation(df, emballage_init):\n",
+    "def recommandation(df, emballage_init, wc=0.7, wrr=0.2, wr=0.1):\n",
     "    n = len(emballage_init)\n",
     "    \n",
     "    reco = [0,0]\n",
     "    i = 0\n",
     "    \n",
+    "    # normaliser les émissions carbone\n",
+    "    df['score carbone'] = df['kg CO2 / kg'].apply(lambda x: (x- min(df['kg CO2 / kg']))/(max(df['kg CO2 / kg'])-min(df['kg CO2 / kg'])))       \n",
+    "\n",
     "    for mat in emballage_init: \n",
     "        #définir le materiau initial qu'on veut remplacer\n",
     "        x_0 = df[df['Matière'] == mat[0]][df[df.columns[6]] == mat[1]].reset_index(drop=True)\n",
     "        #choisir fermes qui produisent le meme produit uniquement\n",
-    "        sub_df = df[df[df.columns[6]] == mat[1]]\n",
-    "\n",
-    "        num_columns = ['kg CO2 / kg', 'Taux de recyclage']\n",
-    "        cat_columns = ['Recyclé']\n",
-    "    \n",
-    "    #    delta_num = pd.DataFrame([])\n",
-    "     #   for c in num_columns:\n",
-    "            #mesurer les deltas en pourcentage pour les colonnes numériques\n",
-    "      #      delta_num[c] = sub_df[c].apply(lambda x: (x - x_0[c])/x_0[c])\n",
-    "\n",
-    "   #     delta_cat = pd.DataFrame([])\n",
-    "    #    for c in cat_columns:\n",
-    "            #mesurer les deltas net pour les colonnes catégoriques (0 et 1 des labels)\n",
-    "     #       delta_cat[c] = sub_df[c].apply(lambda x: (x - x_0[c]))\n",
+    "        sub_df = df[df[df.columns[6]] == mat[1]]                                                                                                                  \n",
     "        \n",
-    "        sub_df['CO2 norm'] = sub_df['kg CO2 / kg'].apply(lambda x: (x- min(sub_df['kg CO2 / kg']))/(max(sub_df['kg CO2 / kg'])-min(sub_df['kg CO2 / kg'])))                                                                                                                         \n",
-    "        sub_df['score'] = 0.7 - ((sub_df['CO2 norm']) - 0.2 * sub_df['Taux de recyclage']/100 - 0.1 * sub_df['Recyclé'])\n",
+    "        # appliquer la formule du score packaging\n",
+    "        sub_df['score packaging'] = wc - ((sub_df['score carbone']) - wrr * sub_df['Taux de recyclage']/100 - wr * sub_df['Recyclé'])\n",
     "    \n",
-    "        # définir la formule du score    \n",
-    "        #sub_df['% CO2 reco vs initial'] = 1 + delta_num['kg CO2 / kg']\n",
-    "        #sub_df['score'] = 1 + 0.8 * (delta_num['kg CO2 / kg']) + 0.1 * (delta_num['Taux de recyclage']) - 0.1 * delta_cat['Recyclé']\n",
-    "    \n",
-    "        sub_df = sub_df.sort_values('score', ascending = False)\n",
+    "        sub_df = sub_df.sort_values('score packaging', ascending = False)\n",
     "        reco[i] = sub_df\n",
     "        i = i+1\n",
     "        \n",
@@ -526,18 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Catégorie', 'Matière', 'kg CO2 / kg', 'Taux de recyclage',\n",
-       "       'Id matière', 'Recyclé', 'Barrière à l’humidité'],\n",
+       "       'Id matière', 'Recyclé', 'Type emballage'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -603,9 +589,9 @@
        "      <th>Taux de recyclage</th>\n",
        "      <th>Id matière</th>\n",
        "      <th>Recyclé</th>\n",
-       "      <th>Barrière à l’humidité</th>\n",
-       "      <th>CO2 norm</th>\n",
-       "      <th>score</th>\n",
+       "      <th>Type emballage</th>\n",
+       "      <th>score carbone</th>\n",
+       "      <th>score packaging</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -630,8 +616,8 @@
        "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>Bouteille</td>\n",
-       "      <td>0.848696</td>\n",
-       "      <td>-0.022696</td>\n",
+       "      <td>0.242469</td>\n",
+       "      <td>0.583531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88</th>\n",
@@ -642,8 +628,8 @@
        "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>Bouteille</td>\n",
-       "      <td>0.906890</td>\n",
-       "      <td>-0.088890</td>\n",
+       "      <td>0.259094</td>\n",
+       "      <td>0.558906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
@@ -654,8 +640,8 @@
        "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>Bouteille</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.178000</td>\n",
+       "      <td>0.285695</td>\n",
+       "      <td>0.536305</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -668,14 +654,14 @@
        "88  Plastique                 Plastique         2.150               59.0   \n",
        "86  Plastique      Plastique transparent        2.350               61.0   \n",
        "\n",
-       "    Id matière  Recyclé Barrière à l’humidité  CO2 norm     score  \n",
-       "89          13        1            Bouteille   0.000000  0.872000  \n",
-       "87          11        0            Bouteille   0.848696 -0.022696  \n",
-       "88          12        0            Bouteille   0.906890 -0.088890  \n",
-       "86          12        0            Bouteille   1.000000 -0.178000  "
+       "    Id matière  Recyclé Type emballage  score carbone  score packaging  \n",
+       "89          13        1     Bouteille        0.000000         0.872000  \n",
+       "87          11        0     Bouteille        0.242469         0.583531  \n",
+       "88          12        0     Bouteille        0.259094         0.558906  \n",
+       "86          12        0     Bouteille        0.285695         0.536305  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -716,9 +702,9 @@
        "      <th>Taux de recyclage</th>\n",
        "      <th>Id matière</th>\n",
        "      <th>Recyclé</th>\n",
-       "      <th>Barrière à l’humidité</th>\n",
-       "      <th>CO2 norm</th>\n",
-       "      <th>score</th>\n",
+       "      <th>Type emballage</th>\n",
+       "      <th>score carbone</th>\n",
+       "      <th>score packaging</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -731,44 +717,8 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>Étiquette</td>\n",
-       "      <td>0.032154</td>\n",
-       "      <td>0.871846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Papier</td>\n",
-       "      <td>Pâte à papier primaire</td>\n",
-       "      <td>0.297</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Étiquette</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.824000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Papier</td>\n",
-       "      <td>Pâte à papier Feuillus</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>60.5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Étiquette</td>\n",
-       "      <td>0.165595</td>\n",
-       "      <td>0.655405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Papier</td>\n",
-       "      <td>Pâte à papier Résineux</td>\n",
-       "      <td>0.410</td>\n",
-       "      <td>56.5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Étiquette</td>\n",
-       "      <td>0.181672</td>\n",
-       "      <td>0.631328</td>\n",
+       "      <td>0.015296</td>\n",
+       "      <td>0.888704</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -779,8 +729,32 @@
        "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>Étiquette</td>\n",
-       "      <td>0.278135</td>\n",
-       "      <td>0.629865</td>\n",
+       "      <td>0.035645</td>\n",
+       "      <td>0.872355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Papier</td>\n",
+       "      <td>Pâte à papier primaire</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Étiquette</td>\n",
+       "      <td>0.012635</td>\n",
+       "      <td>0.811365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Papier</td>\n",
+       "      <td>Pâte à papier Feuillus</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Étiquette</td>\n",
+       "      <td>0.026335</td>\n",
+       "      <td>0.794665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -791,8 +765,20 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>Étiquette</td>\n",
-       "      <td>0.229904</td>\n",
-       "      <td>0.593096</td>\n",
+       "      <td>0.031655</td>\n",
+       "      <td>0.791345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Papier</td>\n",
+       "      <td>Pâte à papier Résineux</td>\n",
+       "      <td>0.410</td>\n",
+       "      <td>56.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Étiquette</td>\n",
+       "      <td>0.027665</td>\n",
+       "      <td>0.785335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -803,8 +789,8 @@
        "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>Étiquette</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.178000</td>\n",
+       "      <td>0.095365</td>\n",
+       "      <td>0.726635</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -813,24 +799,24 @@
       "text/plain": [
        "   Catégorie                          Matière  kg CO2 / kg  Taux de recyclage  \\\n",
        "15    Papier  Pâte à papier primaire recyclée        0.317               52.0   \n",
+       "19    Papier     Pâte à papier Papier recyclé        0.470               54.0   \n",
        "14    Papier           Pâte à papier primaire        0.297               62.0   \n",
        "18    Papier           Pâte à papier Feuillus        0.400               60.5   \n",
-       "17    Papier           Pâte à papier Résineux        0.410               56.5   \n",
-       "19    Papier     Pâte à papier Papier recyclé        0.470               54.0   \n",
        "16    Papier         Pâte à papier Eucalyptus        0.440               61.5   \n",
+       "17    Papier           Pâte à papier Résineux        0.410               56.5   \n",
        "20    Papier                     Papier moyen        0.919               61.0   \n",
        "\n",
-       "    Id matière  Recyclé Barrière à l’humidité  CO2 norm     score  \n",
-       "15           2        1             Étiquette  0.032154  0.871846  \n",
-       "14           1        0             Étiquette  0.000000  0.824000  \n",
-       "18           5        0             Étiquette  0.165595  0.655405  \n",
-       "17           4        0             Étiquette  0.181672  0.631328  \n",
-       "19           6        1             Étiquette  0.278135  0.629865  \n",
-       "16           3        0             Étiquette  0.229904  0.593096  \n",
-       "20           7        0             Étiquette  1.000000 -0.178000  "
+       "    Id matière  Recyclé Type emballage  score carbone  score packaging  \n",
+       "15           2        1      Étiquette       0.015296         0.888704  \n",
+       "19           6        1      Étiquette       0.035645         0.872355  \n",
+       "14           1        0      Étiquette       0.012635         0.811365  \n",
+       "18           5        0      Étiquette       0.026335         0.794665  \n",
+       "16           3        0      Étiquette       0.031655         0.791345  \n",
+       "17           4        0      Étiquette       0.027665         0.785335  \n",
+       "20           7        0      Étiquette       0.095365         0.726635  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,18 +830,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def recommender_packaging(data, produit, nom_ferme = None, metric = 'score'):\n",
-    "    \n",
-    "    if nom_ferme is None : \n",
-    "        df_resultat = calcul_score_sans_ferme(data, produit).sort_values(by = metric)\n",
-    "        resultat = df_resultat.head(10)\n",
-    "    else : \n",
-    "        df_resultat = calcul_score(data, nom_ferme, produit).sort_values(by = metric)\n",
-    "        resultat = df_resultat.head(10)\n",
-    "    \n",
-    "    return resultat"
-   ]
+   "source": []
   }
  ],
  "metadata": {
